--- a/static/style.css
+++ b/static/style.css
@@ -1,18 +1,102 @@
-.chart-container {
-    width: 45%; /* Adjust the width as needed */
-    height: 400px; /* Adjust the height as needed */
-    display: inline-block; /* Display the containers inline */
-    margin-right: 20px; /* Add some margin between the containers */
+body {
+    margin: 0;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    height: calc(100vh - 20px); 
 }
 
-.chart-tooltip {
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.7); /* Background color with transparency */
-    color: #fff; /* Text color */
-    padding: 5px 10px; /* Padding around the tooltip content */
-    border-radius: 5px; /* Rounded corners */
-    font-size: 12px; /* Font size */
-    z-index: 9999; /* Ensure it's on top of other elements */
-    pointer-events: none; /* Allow interactions with elements underneath */
-    display: none; /* Initially hide the tooltip */
+
+.leftContainer {
+    flex: 0.3;  /* Allocate 30% of the width */
+    overflow-y: auto;
+    padding: 5px;
 }
+
+.rightContainer {
+    flex: 0.7;  /* Allocate 70% of the width */
+    overflow-y: auto;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+
+.leftContainer > *:first-child,
+.rightContainer > *:first-child {
+    margin-top: 5px;
+}
+
+.rightContainer {
+    border-left: 2px solid #ccc; 
+}
+
+.chart-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: stretch;
+}
+
+.realTime-chart-container,
+.prevDay-chart-container {
+    flex: 1; 
+    border-right: 2px solid #ccc; 
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+h1 {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+}
+
+.realTime-chart {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: stretch;
+}
+
+.prevDay-chart {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: stretch;
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+canvas {
+    flex: 1;
+    margin: 0 10px;
+    height: 300px !important;
+    width: calc((100% - 40px) / 3) !important;
+}
+
+#daily-button, #mins-button {
+    width: 100px; 
+    height: 40px; 
+    font-size: 16px; 
+    padding: 10px 20px; 
+    background-color: #007bff; 
+    color: #fff; 
+    border: none; 
+    cursor: pointer; 
+    border-radius: 5px; 
+}
+
+#daily-button:hover, #mins-button:hover {
+    background-color: #0056b3; 
+}
+
+#daily-button:active, #mins-button:active {
+    background-color: #003e80; 
+}
+
+
+
+
+
