--- a/static/style.css
+++ b/static/style.css
@@ -1,155 +1,68 @@
 * {
-    scroll-behavior: smooth;
-}
-
-body {
     margin: 0;
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    height: calc(100vh - 20px); 
-    font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Nunito Sans', sans-serif;
+  }
+  
+.main{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  padding: 0 5%;
+  align-items: center;
+  justify-content: center;
+}
+  
+.navbar {
+  background-color: #333;
+  color: #fff;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  text-align: center; 
 }
 
-button {
-    height: 40px; 
-    font-size: 16px; 
-    padding: 10px 20px; 
-    background-color: #007bff; 
-    color: #fff; 
-    border: none; 
-    cursor: pointer; 
-    border-radius: 5px;
-    margin-left: auto;
-    margin-right: auto;
+.navbar:hover {
+  background-color: #444; 
 }
 
-canvas {
-    flex: 1;
-    margin: 0 10px;
-    height: 300px !important;
-    width: calc((100% - 40px) / 3) !important;
+.nav-links a.active {
+  color: #ff9900;
 }
 
-h1, h2 {
-    text-align: center;
-    margin-bottom: 20px;
+
+.container {
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  padding: 10px 20px;
 }
 
-hr {
-    max-width: 400px;
-    width: 45%;
+.nav-links {
+  list-style: none;
+  display: flex;
 }
 
-table {
-    margin: 0 auto 1.5em auto;
+.nav-links li {
+  margin-right: 20px;
 }
 
-table h4, table h5, table h6, table p {
-    line-height: 1.8em;
-    margin: 0;
+.nav-links a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
 }
 
-td {
-    border: solid 0.1em black;
-    justify-content: center;
-    padding: 0 0.5em;
-    text-align: center;
-}
-
-th {
-    align-content: center;
-    align-items: center;
-    border: solid 0.1em black;
-    justify-content: center;
-    padding: 0 0.5em;
-    text-align: center;
+.nav-links a:hover {
+  color: #ff9900; 
 }
 
 .content {
-    margin-left: auto;
-    margin-right: auto;
-    width: 97%;
+  text-align: center;
 }
 
-.row {
-    display: flex;
-    margin-left:-5px;
-    margin-right:-5px;
+.back-video{
+  position: absolute;
+  z-index: -1;
 }
-
-.leftContainer {
-    flex: 30%;  /* Allocate 30% of the width */
-    overflow-y: auto;
-    padding: 5px;
-    text-align: center;
-}
-
-.rightContainer {
-    flex: 70%; /* Allocate 70% of the width */
-    overflow-y: auto;
-    padding: 5px;
-    box-sizing: border-box;
-    border-left: 2px solid #ccc;
-    margin-bottom: 3em;
-}
-
-
-.leftContainer > *:first-child, .rightContainer > *:first-child {
-    margin-top: 5px;
-}
-
-.chart-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.realTime-chart-container, .prevDay-chart-container {
-    flex: 1; 
-    padding: 5px;
-    box-sizing: border-box;
-}
-
-.realTime-chart {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: stretch;
-}
-
-.prevDay-chart {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: stretch;
-}
-
-#daily-button:hover, #mins-button:hover {
-    background-color: #0056b3; 
-}
-
-#daily-button:active, #mins-button:active {
-    background-color: #003e80; 
-}
-
-/* When screen goes beloww max-width, apply following css, else default css above */
-@media only screen and (max-width: 1885px) { 
-    .row {
-        display: block;
-        margin-left:-5px;
-        margin-right:-5px;
-    }
-    .rightContainer {
-        flex: 70%; /* Allocate 70% of the width */
-        overflow-y: auto;
-        padding: 5px;
-        box-sizing: border-box;
-        border-left: none;
-    }
-}
-
-
-
-
