--- a/templates/growthPred.html
+++ b/templates/growthPred.html
@@ -31,5 +31,6 @@
         </div>
     </main>
     <script src="growthPred.js"></script>
+    <script src="service-worker.js"></script>
 </body>
 </html>
