--- a/templates/historicaldata.html
+++ b/templates/historicaldata.html
@@ -15,9 +15,9 @@
     <nav class="navbar">
         <div class="container">
             <ul class="nav-links">
-                <li><a href="/">Real Time Monitoring</a></li>
-                <li><a href="/historicaldata" class="active">Historical Data</a></li>
-                <li><a href="/growthPred">Growth Prediction</a></li>
+                <li><a href="/" class="internal-link">Real Time Monitoring</a></li>
+                <li><a href="/historicaldata" class="internal-link active">Historical Data</a></li>
+                <li><a href="/growthPred" class="internal-link">Growth Prediction</a></li>
                 <li><a href="#">About/Help</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -42,5 +42,6 @@
 
     </main>
     <script src="historical.js"></script>
+    <script src="service-worker.js"></script>
 </body>
 </html>
