--- a/static/realtime.css
+++ b/static/realtime.css
@@ -95,15 +95,6 @@ html {
   color: #00ffcc; 
 }
 
-canvas {
-  display: block;
-  flex: 1;
-  margin: 0 10px;
-  height: 400px !important;
-  width: calc((90% - 30px) / 3) !important;
-  background-color: transparent;
-}
-
 h1, h2 {
   text-align: center;
   margin-bottom: 20px;
@@ -126,4 +117,48 @@ h1, h2 {
   flex-direction: row;
   justify-content: space-around;
   align-items: stretch;
+}
+
+.chart-container {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  align-items: center;
+  margin: 5px;
+  padding: 10px;
+}
+
+/* Styling for Chart 1 */
+#chart1 {
+  width: 1200px; /* Chart 1 is twice as wide */
+  height: 600px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Sub-container for Chart 2 and Chart 3 */
+.sub-container {
+  width: 600px; /* Half the width of Chart 1 */
+  height: 600px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column; /* Arrange Chart 2 and Chart 3 vertically */
+}
+
+/* Styling for Chart 2 and Chart 3 */
+.sub-chart {
+  width: 100%; /* Take up the full width of the sub-container */
+  display: flex;
+  flex-direction: column; /* Vertically fit the canvas within the sub-container */
+}
+
+.chart-canvas1 {
+  width: 100%; /* Make Chart 1 canvas take the full width of Chart 1 */
+  height: 100%; /* Make Chart 1 canvas take the full height of Chart 1 */
+}
+
+.chart-canvas2, .chart-canvas3 {
+  width: 100%; /* Make Chart 2 and Chart 3 canvases take the full width of Chart 2 and Chart 3 */
+  flex: 1; /* Allow Chart 2 and Chart 3 to share the available vertical space equally */
 }
