--- a/static/historical.css
+++ b/static/historical.css
@@ -9,6 +9,12 @@ html {
   background-color: white;
 }
 
+main {
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+
 .navbar {
   background-color: #333;
   color: #fff;
@@ -75,7 +81,6 @@ h1, h2 {
   position: relative;
   flex-direction: row;
   align-items: center;
-  margin: 5px;
   padding: 10px;
 }
 
@@ -86,6 +91,7 @@ h1, h2 {
   position: relative;
   display: flex;
   justify-content: space-between;
+  margin-left: auto;
 }
 
 /* Sub-container for Chart 2 and Chart 3 */
@@ -95,6 +101,7 @@ h1, h2 {
   margin-bottom: 10px;
   display: flex;
   flex-direction: column; /* Arrange Chart 2 and Chart 3 vertically */
+  margin-right: auto;
 }
 
 /* Styling for Chart 2 and Chart 3 */
@@ -123,6 +130,7 @@ h1, h2 {
 }
   
 button {
+  display: block;
   height: 40px; 
   font-size: 16px; 
   padding: 10px 20px; 
@@ -131,6 +139,52 @@ button {
   border: none; 
   cursor: pointer; 
   border-radius: 5px;
+  align-items: center;
+  position: relative;
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
+}
+
+.buttons {
+  display: block;
+  align-items: center;
+  position: relative;
+  justify-content: center;
+}
+
+select {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+} 
+
+@media only screen and (max-width: 1810px) {
+  .chart-container {
+    display: block;
+    position: relative;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
+  }
+
+  #chart1 {
+    width: 1200px; /* Chart 1 is twice as wide */
+    height: 600px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .sub-container {
+    width: 600px; /* Half the width of Chart 1 */
+    height: 600px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column; /* Arrange Chart 2 and Chart 3 vertically */
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
