--- a/static/growthPred.css
+++ b/static/growthPred.css
@@ -97,3 +97,12 @@ button {
     line-height: 30px;
     color: white;
 }
+
+.plot-container {
+    width: 800px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
