--- a/static/historical.css
+++ b/static/historical.css
@@ -5,6 +5,10 @@ body, ul {
   font-family: 'Nunito Sans', sans-serif;
 }
 
+* {
+  scroll-behavior: smooth;
+}
+
 html {
   background-color: white;
 }
@@ -20,7 +24,8 @@ main {
   color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  text-align: center; 
+  text-align: center;
+  font-size: 30px;
 }
 
 .navbar:hover {
@@ -45,6 +50,7 @@ main {
 }
 
 .nav-links li {
+  margin-left: 20px;
   margin-right: 20px;
 }
 
@@ -132,9 +138,10 @@ h1, h2 {
 button {
   display: block;
   height: 40px; 
-  font-size: 16px; 
+  font-size: 18px;
+  font-weight: bold;
   padding: 10px 20px; 
-  background-color: #007bff; 
+  background-color: #009578; 
   color: #fff; 
   border: none; 
   cursor: pointer; 
@@ -144,6 +151,8 @@ button {
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .buttons {
@@ -157,30 +166,37 @@ select {
   display: block;
   margin-left: auto;
   margin-right: auto;
-} 
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 50px;
+  width: 200px;
+  font-size: 18px;
+}
+
+h3 {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
 
 @media only screen and (max-width: 1810px) {
   .chart-container {
     display: block;
     position: relative;
-    flex-direction: row;
     align-items: center;
-    padding: 10px;
+    margin: 5px;
   }
-
   #chart1 {
-    width: 1200px; /* Chart 1 is twice as wide */
-    height: 600px;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
     margin-left: auto;
     margin-right: auto;
   }
-  
+  .sub-chart {
+    width: 1200px; /* Take up the full width of the sub-container */
+    flex-direction: column; /* Vertically fit the canvas within the sub-container */
+  }
   .sub-container {
-    width: 600px; /* Half the width of Chart 1 */
-    height: 600px;
+    width: 1200px; /* Half the width of Chart 1 */
+    height: 1200px; /* Half the width of Chart 1 */
     margin-bottom: 10px;
     display: flex;
     flex-direction: column; /* Arrange Chart 2 and Chart 3 vertically */
