--- a/static/realtime.css
+++ b/static/realtime.css
@@ -1,4 +1,7 @@
-/* Reset some default styles */
+* {
+  scroll-behavior: smooth;
+}
+
 body, ul {
   margin: 0;
   padding: 0;
@@ -7,6 +10,54 @@ body, ul {
 
 html {
   background-color: white;
+}
+
+h1, h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+main {
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+
+.navbar {
+  background-color: #333;
+  color: #fff;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  text-align: center; 
+  font-size: 30px;
+}
+
+.navbar:hover {
+  background-color: #444; 
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+}
+
+.nav-links li {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
+
+.nav-links a.active {
+  color: #00ffcc;
+}
+
+.nav-links a:hover {
+  color: #00ffcc; 
 }
 
 .content-container {
@@ -26,19 +77,14 @@ html {
   margin-right: 10px;
 }
 
-.time {
-  font-size: 2em;
-  color: #00ffcc;
-}
-
 .date {
   margin-top: 12px;
   font-size: 1.5em;
 }
 
-.dataContainer {
-  flex: 1;
-  display: flex; 
+.time {
+  font-size: 2em;
+  color: #00ffcc;
 }
 
 .sensor-box {
@@ -48,24 +94,6 @@ html {
   padding: 10px;
   margin: 5px;
   text-align: center;
-  flex-basis: calc(17% - 3px); 
-}
-
-
-.navbar {
-  background-color: #333;
-  color: #fff;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  text-align: center; 
-}
-
-.navbar:hover {
-  background-color: #444; 
-}
-
-.nav-links a.active {
-  color: #00ffcc;
 }
 
 
@@ -76,34 +104,11 @@ html {
   padding: 10px 20px;
 }
 
-.nav-links {
-  list-style: none;
-  display: flex;
-}
-
-.nav-links li {
-  margin-right: 20px;
-}
-
-.nav-links a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
-}
-
-.nav-links a:hover {
-  color: #00ffcc; 
-}
-
-h1, h2 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
 .dataContainer {
   display: flex;
-  margin-left:-5px;
-  margin-right:-5px;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 .realTime-chart-container {
@@ -122,19 +127,23 @@ h1, h2 {
 .chart-container {
   display: flex;
   position: relative;
-  flex-direction: row;
   align-items: center;
   margin: 5px;
-  padding: 10px;
 }
 
 /* Styling for Chart 1 */
 #chart1 {
-  width: 1200px; /* Chart 1 is twice as wide */
+  width: 1200px;
   height: 600px;
-  position: relative;
   display: flex;
-  justify-content: space-between;
+  margin-left: auto;
+  margin-right: none;
+}
+
+/* Styling for Chart 2 and Chart 3 */
+.sub-chart {
+  width: 600px; /* Take up the full width of the sub-container */
+  flex-direction: column; /* Vertically fit the canvas within the sub-container */
 }
 
 /* Sub-container for Chart 2 and Chart 3 */
@@ -142,23 +151,43 @@ h1, h2 {
   width: 600px; /* Half the width of Chart 1 */
   height: 600px;
   margin-bottom: 10px;
-  display: flex;
   flex-direction: column; /* Arrange Chart 2 and Chart 3 vertically */
-}
-
-/* Styling for Chart 2 and Chart 3 */
-.sub-chart {
-  width: 100%; /* Take up the full width of the sub-container */
-  display: flex;
-  flex-direction: column; /* Vertically fit the canvas within the sub-container */
+  margin-right: auto;
+  margin-left: none;
 }
 
 .chart-canvas1 {
-  width: 100%; /* Make Chart 1 canvas take the full width of Chart 1 */
-  height: 100%; /* Make Chart 1 canvas take the full height of Chart 1 */
+  width: 100%;
+  height: 100%;
 }
 
 .chart-canvas2, .chart-canvas3 {
   width: 100%; /* Make Chart 2 and Chart 3 canvases take the full width of Chart 2 and Chart 3 */
   flex: 1; /* Allow Chart 2 and Chart 3 to share the available vertical space equally */
+}
+
+@media only screen and (max-width: 1810px) {
+  .chart-container {
+    display: block;
+    position: relative;
+    align-items: center;
+    margin: 5px;
+  }
+  #chart1 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .sub-chart {
+    width: 1200px;
+    height: 600px;
+    flex-direction: column;
+  }
+  .sub-container {
+    width: 1200px;
+    height: 1200px;
+    margin-bottom: 10px;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
