--- a/static/style.css
+++ b/static/style.css
@@ -1,42 +1,92 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Nunito Sans', sans-serif;
-  }
-  
-.main{
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  display: flex;
-  padding: 0 5%;
+  scroll-behavior: smooth;
+}
+
+body, ul {
+  margin: 0;
+  padding: 0;
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+html {
+  background-color: white;
+}
+
+#daily-button:hover, #mins-button:hover {
+  background-color: #0056b3; 
+}
+
+#daily-button:active, #mins-button:active {
+  background-color: #003e80; 
+}
+
+h1, h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+h3 {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+main {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  width: 90%;
+}
+
+select {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 50px;
+  width: 200px;
+  font-size: 18px;
+}
+
+button {
+  display: block;
+  height: 40px; 
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px 20px; 
+  background-color: #009578; 
+  color: #fff; 
+  border: none; 
+  cursor: pointer; 
+  border-radius: 5px;
   align-items: center;
+  position: relative;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.buttons {
+  display: block;
+  align-items: center;
+  position: relative;
   justify-content: center;
 }
-  
+
 .navbar {
   background-color: #333;
   color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   text-align: center; 
+  font-size: 30px;
 }
 
 .navbar:hover {
   background-color: #444; 
-}
-
-.nav-links a.active {
-  color: #ff9900;
-}
-
-
-.container {
-  display: flex;
-  justify-content: center; 
-  align-items: center;
-  padding: 10px 20px;
 }
 
 .nav-links {
@@ -45,6 +95,7 @@
 }
 
 .nav-links li {
+  margin-left: 20px;
   margin-right: 20px;
 }
 
@@ -54,15 +105,172 @@
   font-weight: bold;
 }
 
-.nav-links a:hover {
-  color: #ff9900; 
+.nav-links a.active {
+  color: #00ffcc;
 }
 
-.content {
+.nav-links a:hover {
+  color: #00ffcc; 
+}
+
+.content-container {
+  display: flex;
+  align-items: flex-start; 
+}
+
+.datetime {
+  font-size: 10px;
+  padding: 20px;
+  color: #ffffff;
+  background: #444444;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  border-right: 10px #009578 solid;
+  width: 200px;
+  margin-right: 10px;
+}
+
+.date {
+  margin-top: 12px;
+  font-size: 1.5em;
+}
+
+.time {
+  font-size: 2em;
+  color: #00ffcc;
+}
+
+.plot-container {
+  width: 1200px;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.progress-container {
+  margin: 20px auto;
+  background-color: #ccc;
+  border-radius: 5px;
+  max-width: 900px;
+}
+.progress-bar {
+  height: 50px;
+  background-color: #4CAF50; /* Green color for filled portion */
+  border-radius: 5px;
+  text-align: center;
+  line-height: 50px;
+  color: white;
+}
+
+.sensor-box {
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 5px;
   text-align: center;
 }
 
-.back-video{
-  position: absolute;
-  z-index: -1;
+.container {
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.dataContainer {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.realTime-chart-container {
+  flex: 1; 
+  padding: 5px;
+  box-sizing: border-box;
+}
+
+.prevDay-chart-container {
+  flex: 1; 
+  padding: 5px;
+  box-sizing: border-box;
+}
+
+.realTime-chart {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: stretch;
+}
+
+.chart-container {
+  display: flex;
+  position: relative;
+  align-items: center;
+  margin: 5px;
+}
+
+/* Styling for Chart 1 */
+#chart1 {
+  width: 1200px;
+  height: 600px;
+  display: flex;
+  margin-left: auto;
+  margin-right: none;
+}
+
+/* Styling for Chart 2 and Chart 3 */
+.sub-chart {
+  width: 600px; /* Take up the full width of the sub-container */
+  flex-direction: column; /* Vertically fit the canvas within the sub-container */
+}
+
+/* Sub-container for Chart 2 and Chart 3 */
+.sub-container {
+  width: 600px; /* Half the width of Chart 1 */
+  height: 600px;
+  margin-bottom: 10px;
+  flex-direction: column; /* Arrange Chart 2 and Chart 3 vertically */
+  margin-right: auto;
+  margin-left: none;
+}
+
+.chart-canvas1 {
+  width: 100%;
+  height: 100%;
+}
+
+.chart-canvas2, .chart-canvas3 {
+  width: 100%; /* Make Chart 2 and Chart 3 canvases take the full width of Chart 2 and Chart 3 */
+  flex: 1; /* Allow Chart 2 and Chart 3 to share the available vertical space equally */
+}
+
+@media only screen and (max-width: 1900px) {
+  .chart-container {
+    display: block;
+    position: relative;
+    align-items: center;
+    margin: 5px;
+  }
+  #chart1 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .sub-chart {
+    width: 1200px;
+    height: 600px;
+    flex-direction: column;
+  }
+  .sub-container {
+    width: 1200px;
+    height: 1200px;
+    margin-bottom: 10px;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
