--- a/templates/growthPred.html
+++ b/templates/growthPred.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito+Sans:opsz@6..12&family=Oswald:wght@300;700&display=swap" rel="stylesheet">
     <script src="https://cdn.plot.ly/plotly-2.26.0.min.js" charset="utf-8"></script>
     <title>Lettuce Growth Prediction</title>
-    <link rel="stylesheet" href="growthPred.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar">
@@ -15,18 +15,14 @@
                 <li><a href="/">Real Time Monitoring</a></li>
                 <li><a href="/historicaldata">Historical Data</a></li>
                 <li><a href="/growthPred" class="active">Growth Prediction</a></li>
-                <li><a href="#">About/Help</a></li>
-                <li><a href="#">Contact</a></li>
             </ul>
         </div>
     </nav>
     <main>
         <div>
-            <h1>Lettuce Growth Days Prediction</h1>
-            <div class="buttons">
-                <button type="button" id="fetchPredictionsButton" onclick="fetchPredictions()">Get Predictions</button>
-            </div>
-            <h1>Predictions</h1>
+            <h2>Lettuce Growth Days Prediction</h2>
+            <br><button type="button" id="fetchPredictionsButton" onclick="fetchPredictions()">Predict</button><br>
+            <h2>Prediction</h2>
             <p id="predictionDisplay">{{predictionDisplay}}</p>
         </div>
         <div class="progress-container">
