Updated all the code

--- a/templates/realtime.html
+++ b/templates/realtime.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
         <div class="container">
             <ul class="nav-links">
-                <li><a href="/" class=" internal-link active">Real Time Monitoring</a></li>
+                <li><a href="/" class=" internal-link active">Dashboard</a></li>
                 <li><a href="/historicaldata" class="internal-link">Historical Data</a></li>
                 <li><a href="/growthPred" class="internal-link">Growth Prediction</a></li>
             </ul>
@@ -41,7 +41,7 @@
                     <div class="hum-value">0</div>
                 </div>
                 <div class="sensor-box">
-                    <h3>TDS Value (ppm)s</h3>
+                    <h3>TDS Value (ppm)</h3>
                     <div class="tds-value">0</div>
                 </div>
                 <div class="sensor-box">
