--- a/static/style.css
+++ b/static/style.css
@@ -59,7 +59,7 @@ button {
   color: #fff; 
   border: none; 
   cursor: pointer; 
-  border-radius: 5px;
+  border-radius: 30px;
   align-items: center;
   position: relative;
   justify-content: center;
@@ -82,7 +82,7 @@ button {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   text-align: center; 
-  font-size: 30px;
+  font-size: 1.5em;
 }
 
 .navbar:hover {
@@ -95,8 +95,8 @@ button {
 }
 
 .nav-links li {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 2em;
+  margin-right: 2em;
 }
 
 .nav-links a {
@@ -119,19 +119,19 @@ button {
 }
 
 .datetime {
-  font-size: 10px;
-  padding: 20px;
+  font-size: 0.6em;
+  padding: 2em;
   color: #ffffff;
   background: #444444;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-  border-radius: 4px;
-  border-right: 10px #009578 solid;
-  width: 200px;
-  margin-right: 10px;
+  border-radius: 1em;
+  border-right: 1em #009578 solid;
+  width: 20em;
+  margin-right: 1em;
 }
 
 .date {
-  margin-top: 12px;
+  margin-top: 1.5em;
   font-size: 1.5em;
 }
 
@@ -166,6 +166,14 @@ button {
   color: white;
 }
 
+#predictionDisplay {
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
 .sensor-box {
   background-color: #f2f2f2;
   border: 1px solid #ccc;
@@ -173,6 +181,8 @@ button {
   padding: 10px;
   margin: 5px;
   text-align: center;
+  width: 13em;
+  height: 6em;
 }
 
 .container {
